added El-Khazen isotope paper

--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,16 @@
 <h2>Articles in Peer-Reviewed Publications</h2>
 
 <a id="in review"><h3>In Review / In Press</h3></a>
-<li>Khatiwala, S., O. Strachan, and A. Schmittner (2025)<br>
+<li>El-Khazen, M., A. Schmittner, and B. A. Haley (2026)<br>
+	<b>Modeling Ocean Distributions of Neodymium Isotopes Using a Bottom-up Approach</b>
+	<div class="journal"><i>Journal of Geophysical Research: Oceans</i> <a class="publinks" href="https://doi.org/10.22541/essoar.176860271.15556780/v1"> doi: 10.22541/essoar.176860271.15556780/v1.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://essopenarchive.org/doi/full/10.22541/essoar.176860271.15556780/v1">preprint</a>
+		<a class="publinks" href="">pdf</a>
+	</div>
+</li>
+
+<li>Khatiwala, S., O. Strachan, and A. Schmittner (2026)<br>
 	<b>Multi-centennial response of marine carbon pumps to global warming</b>
 	<div class="journal"><i>Nature Communications</i> <a class="publinks" href=""> doi: .</a></div>
 	<div class="publinks">
@@ -52,7 +61,6 @@
 		<a class="publinks" href="">pdf</a>
 	</div>
 </li>
-
 
 <h3>Published</h3>
 
