added El-Khazen Nd paper

--- a/publications.html
+++ b/publications.html
@@ -53,6 +53,15 @@
 	</div>
 </li>
 
+<li>El-Khazen, M., A. Schmittner, and B. A. Haley (2026)<br>
+	<b>New Modeling Approach to Elemental Neodymium in the Ocean: Testing the Bottom-up Hypothesis</b>
+	<div class="journal"><i>Journal of Geophysical Research: Oceans</i> <a class="publinks" href="https://doi.org/10.22541/essoar.173888375.56924349/v1"> doi: 10.22541/essoar.173888375.56924349/v1.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://essopenarchive.org/doi/full/10.22541/essoar.173888375.56924349/v1">preprint</a>
+		<a class="publinks" href="">pdf</a>
+	</div>
+</li>
+
 <li>Khatiwala, S., O. Strachan, and A. Schmittner (2026)<br>
 	<b>Multi-centennial response of marine carbon pumps to global warming</b>
 	<div class="journal"><i>Nature Communications</i> <a class="publinks" href=""> doi: .</a></div>
